--- a/index_activity1.html
+++ b/index_activity1.html
@@ -9,7 +9,7 @@
 
 <body>
     Welcome to codingal...
-    Our motive is to make all the children fall in love for coding...
+    Its my first program
 </body>
 
 </html>
